--- a/.github/workflows/deploy-to-vault-ssr.yml
+++ b/.github/workflows/deploy-to-vault-ssr.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to Vault Repo
+name: Build and Deploy to Vault Repo (SSR)
 
 on:
   push:
@@ -38,8 +38,10 @@ jobs:
 
           # Copy build output to the appropriate directory in the showcase repo
 
-          mkdir -p harborvault/vite-ssr-demo/${GITHUB_REF_NAME}/build
-          cp -R dist/* harborvault/vite-ssr-demo/${GITHUB_REF_NAME}/build
+          touch harborvault/vite-ssr-demo/${GITHUB_REF_NAME}/.server
+          mkdir -p harborvault/vite-ssr-demo/${GITHUB_REF_NAME}/build/dist/
+          cp server.js harborvault/vite-ssr-demo/${GITHUB_REF_NAME}/build/server.js
+          cp -R dist/* harborvault/vite-ssr-demo/${GITHUB_REF_NAME}/build/dist/
 
           echo "Source code available at: https://github.com/sarahrobichaud/vite-ssr-demo/tree/${GITHUB_REF_NAME}" > harborvault/vite-ssr-demo/${GITHUB_REF_NAME}/source-link.txt
 
