changed project name

--- a/.github/workflows/upload-to-vault.yml
+++ b/.github/workflows/upload-to-vault.yml
@@ -6,7 +6,7 @@ on:
       - "*-v*.*.*" # This triggers the action on version tags like v1.0.0
 
 env:
-  PROJECT_NAME: node-env # Replace with your project name
+  PROJECT_NAME: vite-ssr-demo # Replace with your project name
   DIST_DIR: dist # Replace with your dist directory name if different
   ENTRY: server.js # Optional entry point file (e.g., server.js)
   VAULT_NAME: harborvault
